@@ -3,8 +3,9 @@ AUTOMAKE_OPTIONS = gnu no-dependencies
 
 SUBDIRS = doc m4 po src
 
-EXTRA_DIST = ABOUT-NLS AUTHORS BUGS COPYING ChangeLog INSTALL NEWS \
-		README README.CVS THANKS TODO UPGRADE config.rpath \
-		install-sh missing mkinstalldirs nano.spec
+EXTRA_DIST = ABOUT-NLS AUTHORS BUGS COPYING ChangeLog \
+		ChangeLog.pre-2.1 \ INSTALL NEWS README README.CVS \
+		THANKS TODO UPGRADE config.rpath install-sh missing \
+		mkinstalldirs nano.spec
 
 ACLOCAL_AMFLAGS = -I m4
